[package]
name = "ratls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-parser = "0.15.0"
rustls = { version = "0.20.8", features = [
  "dangerous_configuration",
  "logging",
] }
log = "0.4.17"
rcgen = "0.10.0"
occlum_dcap = { path = "deps/occlum/tools/toolchains/dcap_lib" }

# [features]
# occlum-dcap = ["occlum_dcap"]
