[package]
name = "occlum-ratls"
version = "0.2.3"
edition = "2021"
authors = ["Ivan Chirkin <chirkin.ivan@gmail.com>"]
description = "Lib for remote attestation between occlum instances"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aggregion/occlum-ratls"
keywords = ["occlum", "rustls", "ratls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x509-parser = "0.15.0"
rustls = { version = "0.20.8", features = [
  "dangerous_configuration",
  "logging",
] }
log = "0.4.17"
rcgen = "0.10.0"
occlum-sgx = "^0.1.12"
ring = "0.16.20"

[dependencies.actix-web]
version = "4.3.1"
features = ["rustls"]
optional = true

[dependencies.actix-http]
version = "3.3"
features = ["http2", "ws"]
optional = true

[dependencies.actix-service]
version = "2"
optional = true

[dependencies.reqwest]
version = "=0.11.16"
features = ["__rustls"]
optional = true

[dev-dependencies.env_logger]
version = "0.10.0"

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]

[features]
default = []
reqwest = ["dep:reqwest"]
actix-web = ["dep:actix-web", "actix-service", "actix-http"]


[[example]]
name = "server"
required-features = ["actix-web"]

[[example]]
name = "client"
required-features = ["reqwest"]
