[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratls = { path = "../.." }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.16", features = ["rustls-tls"] }
rustls = { version = "0.20.8", features = [
  "dangerous_configuration",
  "tls12",
  "logging",
] }
env_logger = "0.10.0"
log = "0.4.17"
