[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratls = { path = "../.." }
tokio = { version = "1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["__rustls"] }
